# hntui

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  config.toml  plugin-config.toml  ui-config-eink.toml  ui-config.json  ui-config.toml
.cargo/: config.toml
.github/workflows/: release.yml
docs/adr/: 20251229-line-based-comment-rendering.md  20260716-cargo-toml-canonical-version.md
docs/superpowers/plans/: 2026-04-30-adopt-smolllm-rs.md
docs/superpowers/specs/: 2026-04-30-adopt-smolllm-rs-design.md
scripts/: install.sh  release.sh  screenshot-comments.tape  screenshot-demo.tape  screenshot-stories.tape  screenshots.sh
src/: app.rs  browser.rs  config.rs  input.rs  logging.rs  main.rs  state.rs  summarizer.rs  tasks.rs  text.rs  tui.rs
src/api/: client.rs  file_cache.rs  mod.rs  search.rs  source.rs  types.rs
src/app/: actions.rs  browser_actions.rs  comment_tree.rs  comments.rs  events.rs  help_tests.rs  list_nav.rs  mouse.rs  prefetch.rs  run.rs  search.rs  settings_actions.rs  settings_popup.rs  stories.rs  tasks.rs  test_support.rs  tests.rs
src/plugin/: config.rs  llm.rs  mod.rs  summarize.rs
src/ui/: clamped_scroll.rs  comment_layout.rs  comment_view.rs  feed_filter.rs  help.rs  markdown.rs  mod.rs  plugin_overlay.rs  settings.rs  story_list.rs  summary_overlay.rs  theme.rs
src/ui/summary_overlay/: render_tests.rs  tests.rs
tests/: cli.rs
