[package]
name = "hntui"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
directories = "5"
futures = "0.3"
html-escape = "0.2"
lru = "0.12"
open = "5"
pulldown-cmark = { version = "0.12", default-features = false }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
chrono = { version = "0.4.44", default-features = false, features = ["alloc"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"

[profile.release]
lto = true
codegen-units = 1
